--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is Main Branch</h1>
-    
+    <h1>Feature Branch</h1>
+    <p>This is features branch</p>
+
     
 </body>
 </html>
